# zreion_v0

./: .coveragerc  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: run_tests.yaml  wheels.yml
docs/: Makefile  conf.py  index.rst
src/zreion/: __init__.py  zreion.py  zreion.pyx
tests/: __init__.py  conftest.py  test_zreion.py
