[build-system]
requires = ["setuptools", "wheel", "Cython", "oldest-supported-numpy"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py36']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
